<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

  <Button
      android:id="@+id/button1"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:onClick="clickSleep"
      android:text="@string/sleep"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button2"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/main_btn"
      app:layout_constraintHorizontal_chainStyle="spread"
      />

  <Button
      android:id="@+id/button2"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_below="@id/button1"
      android:onClick="clickWake"
      android:text="@string/wake"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button3"
      app:layout_constraintStart_toEndOf="@id/button1"
      style="@style/main_btn"

      />

  <Button
      android:id="@+id/button3"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_below="@id/button2"
      android:onClick="clickFeed"
      android:text="@string/feed"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button4"
      app:layout_constraintStart_toEndOf="@id/button2"
      style="@style/main_btn"

      />

  <Button
      android:id="@+id/button4"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_below="@id/button3"
      android:onClick="clickPoo"
      android:text="@string/poo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button5"
      app:layout_constraintStart_toEndOf="@id/button3"
      style="@style/main_btn"
      />

  <Button
      android:id="@+id/button5"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:onClick="clickNappy"
      android:text="@string/nappy"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/button4"
      style="@style/main_btn"
      />

  <Button
      android:id="@+id/button6"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:onClick="clickData"
      android:text="统计"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/main_btn"
      />


  <RelativeLayout
      android:id="@+id/fragment_container"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      />

</android.support.constraint.ConstraintLayout>
